# SistemaGerenciadordeTarefas

./: Task.py  TaskDAO.py  User.py  UserDAO.py  funcoes.py  main.py  pyproject.toml  usuarios.txt
Tasks/: diego.id
