[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Diego10Rocha <diego93rocha@gmail.com>"]
description = ""
name = "sistemagerenciadordetarefas"
version = "0.1.0"
[tool.poetry.dependencies]
prettytable = "^0.7.2"
python = "^3.7"
[tool.poetry.dev-dependencies]
