[tool.poetry]
name = "sistemagerenciadordetarefas"
version = "0.1.0"
description = ""
authors = ["Diego10Rocha <diego93rocha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prettytable = "^0.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
